--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     <body className="openhuman-banner-hidden">
         <div id="root"><!--app-html--></div>
-        <script type="module" src="/src/main.jsx"></script>
+        <script type="module" src="/src/index.jsx"></script>
     </body>
 </html>
